--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,10 +35,14 @@ ul li {
 }
 
 footer {
-    background-color: black;
-    color: white;
+    background-color: rgb(165, 165, 165);
+    color: rgb(41, 41, 41);
     padding: 15px;
     width: 100%;
     position:fixed;
     bottom: 0;
+}
+
+footer p{
+    display: inline-block;
 }
